- Subtle navbar gradient - Removed ie8/9 icon fix 'cause it's causing issues in IE10 - Improved collapsed menu icon

--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -2985,7 +2985,15 @@ input[type="submit"].btn.btn-mini {
   min-height: 40px;
   padding-left: 20px;
   padding-right: 20px;
-  background: #3e6c41;
+  background-color: #3c683f;
+  background-image: -moz-linear-gradient(top, #3e6c41, #38623b);
+  background-image: -ms-linear-gradient(top, #3e6c41, #38623b);
+  background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#3e6c41), to(#38623b));
+  background-image: -webkit-linear-gradient(top, #3e6c41, #38623b);
+  background-image: -o-linear-gradient(top, #3e6c41, #38623b);
+  background-image: linear-gradient(top, #3e6c41, #38623b);
+  background-repeat: repeat-x;
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#3e6c41', endColorstr='#38623b', GradientType=0);
 }
 .navbar .container {
   width: auto;
@@ -3187,9 +3195,12 @@ input[type="submit"].btn.btn-mini {
   width: 18px;
   height: 2px;
   background-color: #f5f5f5;
-  -webkit-box-shadow: 1px 1px 1px #000000;
-  -moz-box-shadow: 1px 1px 1px #000000;
-  box-shadow: 1px 1px 1px #000000;
+  -webkit-box-shadow: -1px -1px 0 rgba(0, 0, 0, 0.45);
+  -moz-box-shadow: -1px -1px 0 rgba(0, 0, 0, 0.45);
+  box-shadow: -1px -1px 0 rgba(0, 0, 0, 0.45);
+  -webkit-border-radius: 2px;
+  -moz-border-radius: 2px;
+  border-radius: 2px;
 }
 .btn-navbar .icon-bar + .icon-bar {
   margin-top: 3px;
