--- a/css/main.css
+++ b/css/main.css
@@ -22,9 +22,12 @@
 .btn i[class^="icon"] {
   position: relative;
   top: 1px;
-  top: 2px\0/; /* IE8-9 Fix */
   line-height: 15px !important;
   font-size: 16px;
+}
+
+.btn-status i[class^="icon"] {
+  text-shadow: -1px -1px 0 rgba(0, 0, 0, 0.25);
 }
 
 #staminia-logo {
