--- a/less/mixins.less
+++ b/less/mixins.less
@@ -418,6 +418,9 @@
     background-image: -o-linear-gradient(@angle, rgba(255,255,255,.15) 25%, transparent 25%, transparent 50%, rgba(255,255,255,.15) 50%, rgba(255,255,255,.15) 75%, transparent 75%, transparent);
     background-image: linear-gradient(@angle, rgba(255,255,255,.15) 25%, transparent 25%, transparent 50%, rgba(255,255,255,.15) 50%, rgba(255,255,255,.15) 75%, transparent 75%, transparent);
   }
+  .subtle(@color) {
+    .vertical(@color, darken(@color, 3%));
+  }
 }
 // Reset filters for IE
 .reset-filter() {
