--- a/less/navbar.less
+++ b/less/navbar.less
@@ -20,7 +20,7 @@
   min-height: @navbarHeight;
   padding-left:  20px;
   padding-right: 20px;
-  background: @navbarBackground;
+  #gradient > .subtle(@navbarBackground);
 }
 
 // Set width to auto for default container
@@ -261,7 +261,8 @@
   width: 18px;
   height: 2px;
   background-color: #f5f5f5;
-  .box-shadow(1px 1px 1px @black);
+  .box-shadow(-1px -1px 0 rgba(0, 0, 0, .45);
+  .border-radius(2px);
 }
 .btn-navbar .icon-bar + .icon-bar {
   margin-top: 3px;
